fixed relative spacing

--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -1,13 +1,13 @@
+
 .App {
   text-align: center;
-  height: 100vh;
-  width: 100vw;
   margin: auto;
   background-color: #c2d7d1
   /* display: flex; */
 }
 .overall-container{
-height: 74vh;
+min-height: 74vh;
+height: fit-content;
 
 }
 .wrap{
@@ -15,6 +15,7 @@ height: 74vh;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 /* home */
@@ -32,10 +33,18 @@ font-size: 3em;
   color: #516678;
 }
 .photo{
-  height: 80%;
+  max-height: 80%;
+  min-width: 50%;
+  object-fit: contain;
+  
 }
 .photo img{
-  height: 100%;
+  max-height: 60vh;
+   object-fit: contain; 
+   border: 1px solid;
+   padding: 10px;
+   box-shadow: 30px 30px #51667891
+
 }
 
 /* about */
@@ -53,8 +62,9 @@ width: 55%;
 }
 /* bars */
 .border-bars{
-width: 100vw;
-height: 13vh;
+max-width: 100vw;
+min-height: 13vh;
+height: fit-content;
 
 }
 .bottom{
@@ -85,6 +95,7 @@ justify-content: space-around;
 }
 .single-icons{
   color: inherit;
+  font-size: 2rem !important;
   text-decoration: none;
   margin-right: 1vw;
 }
@@ -138,7 +149,8 @@ margin-right: 2vw;
   color: inherit;
 }
 #blog-container{
-  width: 17vw;
+  max-width: 17vw;
+  min-width: 10vw;
   height: 23vh;
   border-radius: 25px;
   display: flex;
@@ -176,37 +188,80 @@ margin-right: 2vw;
 }
 
 /* Modal */
-#modal {
+.modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
-  height: 100%; /* Full width */
+  height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-   text-align: center;
 }
-#modal-title{
-  font-size: 30px;
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+   margin: 15% auto; /* 15% from the top and centered  */
+  padding: 2vh 2vw;
+  border: 1px solid #888;
+  width: 70%; /* Could be more or less, depending on screen size */
+  text-align: center;
+}
+
+#modal-content {
+  display: flex;
+  flex-direction: row;
+  align-items:center;
+}
+#modal-header{
+height: 20%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
   font-weight: bold;
-  color: rgb(32, 100, 32);
-  font-family: 'Jazz LET', 'fantasy';
 }
-#modal-content{
-height: 40% !important;
-display: flex;
-flex-direction: row;
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
+.button {
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 1vh 1vw;
+  border: 1px black solid;
+      width: 7vw;
+      height: fit-content;
+      padding: 12px;
+      color: black
+}
+.modal-dialog {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+}
+
+.button:hover{
+  background-color: #a1b1ad
+}
+
 #modal-image{
-  width: 60%;
+  width: 50%;
   height: 40%;
+  object-fit: contain;
 }
 #plantModalDescription{
   font-size: 20px;
@@ -214,6 +269,7 @@ flex-direction: row;
 }
 #modal-footer{
   height: 20% !important;
+  margin: auto;
 }
 /* Colors
 #e9b7ae
